tests/marouter/errors/format/vm/vm_num_districts/errors.marouter
Error: Missing line with 3 district names.
Quitting (on error).
